# snips

./: .gitignore  Cargo.toml  README.md
src/: file.rs  lib.rs  main.rs  parser.rs  util.rs
src/parser/: mod.rs  tests.rs
tests/: test.rs
tests/testfiles/src/: Testfile_IN_Slide.java
tests/testfiles/src/dir1/: Testfile_IN_Dir.java
tests/testfiles/template/: Testfile_IN_Slide-public.java  Testfile_IN_Slide-solution.java  Testfile_IN_Slide_Slide-public.java
