[package]
name = "snips"
authors = ["Markus Gumbel"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
indoc = "1.0"
log = "0.4.14"
stderrlog = "0.5.1"
file_diff = "1.0.0"
